--- a/lib/betting_system_web/templates/layout/live.html.heex
+++ b/lib/betting_system_web/templates/layout/live.html.heex
@@ -108,7 +108,7 @@
     style=" 
     z-index:4;"
   >
-    <div class="flex flex-col  border border-red-500">
+    <div class="flex flex-col  ">
       <%= if @user.role == "admin" || @user.role == "superadmin" do %>
         <div
           id="menu"
