--- a/lib/betting_system_web/live/user_live/index.html.heex
+++ b/lib/betting_system_web/live/user_live/index.html.heex
@@ -187,7 +187,7 @@
             </span>
           </div>
         </div>
-        <button phx-click="bet history" class="cursor:pointer border border-red-500">
+        <button phx-click="bet history" class="cursor:pointer ">
           view bet history
         </button>
       </div>
